force-app/main/default/objects/Vacancy__c/fields/Main_Skill__c.field-meta.xml
<CustomField>
    <fullName>Main_Skill__c</fullName>
    <label>Main Skill</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Administrative / Secretarial</fullName>
            </value>
            <value>
                <fullName>Business Analyst</fullName>
            </value>
            <value>
                <fullName>Business Development</fullName>
            </value>
            <value>
                <fullName>Business Intelligence</fullName>
            </value>
            <value>
                <fullName>Business Manager</fullName>
            </value>
            <value>
                <fullName>Consulting</fullName>
            </value>
            <value>
                <fullName>Executive</fullName>
            </value>
            <value>
                <fullName>Executive Assistant</fullName>
            </value>
            <value>
                <fullName>Human Resources</fullName>
            </value>
            <value>
                <fullName>Management</fullName>
            </value>
            <value>
                <fullName>Notary</fullName>
            </value>
            <value>
                <fullName>Office Assistant</fullName>
            </value>
            <value>
                <fullName>Office Manager</fullName>
            </value>
            <value>
                <fullName>Personal Assistant</fullName>
            </value>
            <value>
                <fullName>Receptionist</fullName>
            </value>
            <value>
                <fullName>Training Coordinator</fullName>
            </value>
            <value>
                <fullName>Advertising</fullName>
            </value>
            <value>
                <fullName>Art Curator</fullName>
            </value>
            <value>
                <fullName>Broadcaster</fullName>
            </value>
            <value>
                <fullName>Content Manager</fullName>
            </value>
            <value>
                <fullName>Content Strategist</fullName>
            </value>
            <value>
                <fullName>Digital Media</fullName>
            </value>
            <value>
                <fullName>Editing</fullName>
            </value>
            <value>
                <fullName>Fashion Design</fullName>
            </value>
            <value>
                <fullName>Fashion Buyer</fullName>
            </value>
            <value>
                <fullName>Graphic Design</fullName>
            </value>
            <value>
                <fullName>Interior Design</fullName>
            </value>
            <value>
                <fullName>Makeup Artist</fullName>
            </value>
            <value>
                <fullName>Museum Curator</fullName>
            </value>
            <value>
                <fullName>Photography</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>