force-app/main/default/objects/Vacancy__c/fields/Vacancy_Status__c.field-meta.xml
<CustomField>
    <fullName>Vacancy_Status__c</fullName>
    <label>Vacancy Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Filled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>